fix(theme-default): adjust sidebar menu z-index

--- a/packages/theme-default/src/components/LocalSideBar/index.scss
+++ b/packages/theme-default/src/components/LocalSideBar/index.scss
@@ -3,7 +3,7 @@
   position: sticky;
   top: 0;
   left: 0;
-  z-index: var(--rp-z-index-nav);
+  z-index: var(--rp-z-index-local-nav);
   display: flex;
   justify-content: space-between;
   align-items: center;
